fix: try and indicate default colors to resolve Android issue with invisible text

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -236,6 +236,8 @@ button {
   height: 100vh;
   width: 15vw;
   min-width: 320px;
+  color: black;
+  background-color: white;
 }
 
 .overflowdiv {
@@ -314,6 +316,8 @@ button {
   position: relative;
   display: flex;
   flex-direction: column;
+  color: black;
+  background-color: white;
   /* min-width: 500px; */
   /* overflow: hidden; */
 }
@@ -325,6 +329,8 @@ button {
   display: flex;
   flex-direction: column;
   gap: 2vh;
+  color: black;
+  background-color: white;
   /* padding: 0 10vw; */
   /* overflow: hidden; */
 }
@@ -680,6 +686,8 @@ svg {
     height: 95vh;
     width: 100vw;
     grid-area: 1 / 1 / 2 / 2;
+    color: black;
+    background-color: white;
   }
 
   .imgcontainer {
